fix z-index of rest show photo

--- a/frontend/src/components/RestShow/RestShow.css
+++ b/frontend/src/components/RestShow/RestShow.css
@@ -8,6 +8,7 @@
     width: 100%;
     object-fit: cover;
     height: 460px;
+    z-index: 1;
 }
 
 img {
@@ -68,7 +69,7 @@ img {
 }
 
 #description-review-div {
-    padding: 0 16px 16px; 
+    padding: 0 16px 16px;
     display: flex;
     justify-content: center;
     margin-top: -51px;
